Created style.css file

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,16 +6,19 @@
     <meta name="description" content="Let's Hit the Slopes">
     <meta name="keywords" content="Social app, skiing, snowboarding, connecting people, slopes">
     <meta name="author" content="Oleksiy Statsenko">
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     
     <!-- favicon file -->
     <link rel="icon" href="{{ url_for('static', filename='img/favicon/ski_favicon_32.png') }}" type="image/x-icon">
 
     <!--Import materialize.css-->
-      <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" type="text/css" />
 
-    <!--Let browser know website is optimized for mobile-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-
+    
 </head>
 
 <body>
