--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,7 +11,7 @@ html, body {
 body{
     font-family: 'Roboto', sans-serif;
     font-size: 15px;   
-    background-image: url("../static/img/hero_img_md.jpg");    
+    background-image: url("../static/img/hero_img_med.jpg");    
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
