--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,14 @@
 {% extends 'base.html'%} 
 {% block content %}
 
-<div class="row">
-    <div class="column">
-        <a class="waves-effect waves-light btn-large">ButtonOne</a>
-    </div>
-    <div class="column">
-        <a class="waves-effect waves-light btn-large">ButtonTwo</a>
-    </div>
+<div class="container">
+<div id="buttons-container" class="row">
+    
+        <a class="button waves-effect btn-large">Sign Up</a>
+    
+        <a class="button waves-effect btn-large">Sign In</a>
+    
 </div>
-
+</div>
 
 {% endblock %}
