--- a/templates/base.html
+++ b/templates/base.html
@@ -23,27 +23,40 @@
 
 <body>
     <header>
-        <nav>
+        <nav id="navbar">
             <div class="nav-wrapper">
-                <a href="#!" class="brand-logo">Hit the Slopes!</a>
-                <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-                <ul class="right hide-on-med-and-down">
-                    <li><a href="#">Trips</a></li>
-                    <li><a href="#">Add Trip</a></li>
+                <div id="home-logo">
+                <a href="#"  class="brand-logo">Hit the Slopes!</a>
+                </div>
+                <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+                <ul id="nav-mobile" class="right hide-on-med-and-down">
+                    <li><a href="{{url_for('get_trips')}}">Trips</a></li>
+                    <li><a href="#">New Trip</a></li>
                     <li><a href="#">Locations</a></li>
-                    <li><a href="#">Add Location</a></li>
+                    <li><a href="#">New Location</a></li>
+                    <li><a href="#"><i class="fas fa-sign-out-alt"></i></a></li>
+                </ul>
+                <ul class="side-nav" id="mobile-demo">
+                    <li><a href="#">Trips</a></li>
+                    <li><a href="#">New Trip</a></li>
+                    <li><a href="#">Locations</a></li>
+                    <li><a href="#">New Location</a></li>
+                    <li><a href="#"><i class="fas fa-sign-out-alt"></i></a></li>
                 </ul>
             </div>
         </nav>
-
-        
     </header>
-    <div class="container">
-        {% block content %} {% endblock %}
-    </div>
 
+    <div class="container">
+        {% block content %} {% endblock %}   
+    </div>
+    
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="js/materialize.min.js"></script>
-    
+    <script type="text/javascript">
+        $(document).ready(function(){
+        $('.sidenav').sidenav();
+    });
+    </script>
 </body>
 </html>
