--- a/templates/base.html
+++ b/templates/base.html
@@ -32,8 +32,8 @@
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li><a href="{{url_for('get_trips')}}">Trips</a></li>
                     <li><a href="#">New Trip</a></li>
-                    <li><a href="#">Locations</a></li>
-                    <li><a href="#">New Location</a></li>
+                    <li><a href="{{url_for('get_locations')}}">Ski Resorts</a></li>
+                    <li><a href="#">New Ski Resort</a></li>
                     <li><a href="#"><i class="fas fa-sign-out-alt"></i></a></li>
                 </ul>
                 <ul class="side-nav" id="mobile-demo">
