--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Let's Team Up & Hit the Slopes!</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Let's Hit the Slopes">
@@ -56,6 +57,7 @@
     <script type="text/javascript">
         $(document).ready(function(){
         $('.sidenav').sidenav();
+        $('select').formSelect();
     });
     </script>
 </body>
