--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 
 <div class="container">
     <div id="buttons-container" class="row">
-        <a class="button waves-effect btn-large">Sign Up</a>
+        <a href="{{url_for('sign_up')}}" class="button waves-effect btn-large">Sign Up</a>
         <a class="button waves-effect btn-large">Sign In</a>
     </div>
 </div>
