--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
     <!-- favicon file -->
     <link rel="icon" href="{{ url_for('static', filename='img/favicon/ski_favicon_32.png') }}" type="image/x-icon">
 
+    
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -52,13 +53,15 @@
         {% block content %} {% endblock %}   
     </div>
     
-    <!--JavaScript at end of body for optimized loading-->
-    <script type="text/javascript" src="js/materialize.min.js"></script>
+    <!-- JQuery link -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script type="text/javascript">
         $(document).ready(function(){
-        $('.sidenav').sidenav();
-        $('select').formSelect();
-    });
+            $('.sidenav').sidenav();
+            $('select').formSelect();
+        });
     </script>
 </body>
 </html>
