Sing_up.html ready 95%

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,8 @@
 
     <!-- favicon file -->
     <link rel="icon" href="{{ url_for('static', filename='img/favicon/ski_favicon_32.png') }}" type="image/x-icon">
-
+    <!--Font Awesome style link-->
+    <script src="https://use.fontawesome.com/3c5ef3c040.js"></script>
     
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
