--- a/templates/user_account.html
+++ b/templates/user_account.html
@@ -5,8 +5,10 @@
     {% for user in users %}
 
         {{user.name}}
-        {{user.male}}
+        {{user.gender}}
         {{user.ageRange}}
+        {{user.from}}
+        {{user.avatar}}
 
     {% endfor %}
 </div>
