--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -10,15 +10,13 @@
                     <div class="row">
                         <form action="{{ url_for('add_user') }}" method="POST" class="col s12">
                             <div class="row">
-                                <div class="input-field col s12">
+                                <div class="input-field col s12 m12 l6">
                                     <i class="material-icons prefix">account_circle</i>
-                                    <input id="name" name="name" type="text" class="validate">
-                                    <label for="name">Name</label>
+                                    <input placeholder="your name" id="name" name="name" type="text" class="validate">
                                 </div>
-                                <div class="input-field col s12">
+                                <div class="input-field col s12 m12 l6">
                                     <i class="material-icons prefix">lock</i>
                                     <input placeholder="enter your password" id="password" name="password" type="password">
-                                    <label for="password"><span class="red-text"><b></b></span></label>
                                 </div>
                                 <!--
                                 <div class="input-field col s12">
@@ -26,54 +24,41 @@
                                     <input placeholder="Re-enter your password" id="password_two" name="password_two" type="password">
                                     <label for="password_two"><span class="red-text"><b></b></span></label>
                                 </div> -->
-                                <div class="input-field col s12">
+                                <div class="input-field col s12 m12 l6">
                                     <i class="material-icons prefix">wc</i>
-                                    <div class="col s2 center">
-                                    </div>
-                                    <div class="col s5 center">
-                                        <p>
-                                            <input id="male" name="male" type="checkbox"/>
-                                            <label for="male"><span>Male</span></label>
-                                        </p>
-                                    </div>
-                                    <div class="col s5 center">
-                                            <input id="female" name="female" type="checkbox"/>
-                                            <label for="female"><span>Female</span>
-                                        </label> 
-                                    </div>                
+                                    <input placeholder="male or female" id="gender" name="gender" type="text" class="validate">
                                 </div>
-                                <div class="col s2 center">
-                                </div>
-                                <div class="input-field col s12">
+                                <div class="input-field col s12 m12 l6">
                                     <i class="material-icons prefix">date_range</i>
                                     <select class="icons dropdown-content" id="ageRange" name="ageRange" required="" aria-required="true">
-                                        <option value="1" disabled selected>Choose your age</option>
-                                        <option value="2">18 to 25</option>
-                                        <option value="3">26 to 32</option>
-                                        <option value="4">33 to 40</option>
-                                        <option value="5">41 to 48</option>
-                                        <option value="6">49 plus</option>
+                                        <option value="1" selected>Your age</option>
+                                        <option value="18-25">18 to 25</option>
+                                        <option value="26-32">26 to 32</option>
+                                        <option value="33-40">33 to 40</option>
+                                        <option value="41-48">41 to 48</option>
+                                        <option value="49+">49 plus</option>
                                     </select>
-                                    <label>Age Range</label>
                                 </div>
-                                <div class="input-field col s12 m6">
+                                <div class="input-field col s12 m12 l6">
+                                    <i class="material-icons prefix">location_city</i>
+                                    <input placeholder="you are from:" id="from" name="from" type="text" class="validate">
+                                </div>
+                                <div class="input-field col s12 m12 l6">
                                     <i class="material-icons prefix">face</i>
                                     <select class="icons dropdown-content" id="avatar" name="avatar" required="" aria-required="true">
-                                        <option value="1" disabled>Choose your Avatar</option>
-                                        <option value="2" selected data-icon="/static/img/avatar/boot.png">SkiBoot</option>
-                                        <option value="3" data-icon="/static/img/avatar/cabin.png">Cabin</option>
-                                        <option value="4" data-icon="/static/img/avatar/coffee.png">Coffee</option>
-                                        <option value="5" data-icon="/static/img/avatar/goggles.png">Goggles</option>
-                                        <option value="6" data-icon="/static/img/avatar/mountain.png">Mountain</option>
-                                        <option value="7" data-icon="/static/img/avatar/skier.png">Ski</option>
-                                        <option value="8" data-icon="/static/img/avatar/skipass.png">SkiPass</option>
-                                        <option value="9" data-icon="/static/img/avatar/snowboarder.png">Snowboard</option>
+                                        <option value="1" selected>Choose your Avatar</option>
+                                        <option value="skiboot" data-icon="/static/img/avatar/boot.png">SkiBoot</option>
+                                        <option value="cabin" data-icon="/static/img/avatar/cabin.png">Cabin</option>
+                                        <option value="coffee" data-icon="/static/img/avatar/coffee.png">Coffee</option>
+                                        <option value="goggles" data-icon="/static/img/avatar/goggles.png">Goggles</option>
+                                        <option value="peak" data-icon="/static/img/avatar/peak.png">Peak</option>
+                                        <option value="skis" data-icon="/static/img/avatar/skier.png">Skis</option>
+                                        <option value="skipass" data-icon="/static/img/avatar/skipass.png">SkiPass</option>
+                                        <option value="snowboard" data-icon="/static/img/avatar/snowboarder.png">Snowboard</option>
                                     </select>
-                                    <label for="avatar">My Avatar</label>
                                 </div>
-                                
                             </div>
-                            <button class="btn waves-effect waves-light right" type="submit">Sign Up!</button>
+                            <button class="btn waves-effect waves-light right" type="submit">Sign Up</button>
                         </form>
                     </div>
                 </div>
