--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <div class="container">
     <div id="buttons-container" class="row">
         <a href="{{url_for('sign_up')}}" class="button waves-effect btn-large">Sign Up</a>
-        <a class="button waves-effect btn-large">Sign In</a>
+        <a href="{{url_for('sign_in')}}" class="button waves-effect btn-large">Sign In</a>
     </div>
 </div>
 
