--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,8 @@
 
 <div class="container">
     <div id="buttons-container" class="row">
-        <a href="{{url_for('sign_up')}}" class="button waves-effect btn-large">Sign Up</a>
-        <a href="{{url_for('sign_in')}}" class="button waves-effect btn-large">Sign In</a>
+        <a href="{{url_for('sign_up')}}" class="waves-effect waves-red accent-2 btn-large">Sign Up</a>
+        <a href="{{url_for('sign_in')}}" class="waves-effect waves-red btn-large">Sign In</a>
     </div>
 </div>
 
