--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -2,16 +2,16 @@
 {% block content %}
 
 <div class="container">
-    <div class="card">
-        <div class="card-content">
-            <div id="signup-form" class="card-content bg-custom one-px-border">
-                <div class="card-panel">
-                    <span class="card-title">Sign In</span>
+    <div class="card valign-wrapper">
+        
+            <div class="card-content grey lighten-4">
+                <div id="signup-form" class="card-panel grey lighten-5">
+                    <span class="card-title">SIGN UP</span>
                     <div class="row">
-                        <form action="{{ url_for('sign_in') }}" method="POST" class="col s12">
+                        <form action="{{ url_for('sign_up') }}" method="POST" class="col s12">
                             <div class="row">
                                 <div class="input-field col s12 m12 l6">
-                                    <i class="material-icons prefix">account_circle</i>
+                                    <i class="small material-icons prefix">account_circle</i>
                                     <input placeholder="your name" id="name" name="name" type="text" class="validate">
                                 </div>
                                 <div class="input-field col s12 m12 l6">
@@ -58,12 +58,12 @@
                                     </select>
                                 </div>
                             </div>
-                            <button class="btn waves-effect waves-light right" type="submit">Sign Up</button>
+                            <button class="btn waves-effect waves-red right" type="submit">Sign Up</button>
                         </form>
                     </div>
                 </div>
             </div>
-        </div>
+        
     </div>
 </div>
 
