--- a/templates/sign_in.html
+++ b/templates/sign_in.html
@@ -3,10 +3,9 @@
 
 <div class="container">
     <div class="card">
-        <div class="card-content">
-            <div id="signup-form" class="card-content bg-custom one-px-border">
-                <div class="card-panel">
-                    <span class="card-title">Sign In</span>
+        <div id="signup-form" class="card-content grey lighten-4">
+            <div class="card-panel grey lighten-5">
+                    <span class="card-title">SIGN IN</span>
                     <div class="row">
                         <form action="{{ url_for('sign_in') }}" method="POST" class="col s12">
                             <div class="row">
@@ -24,7 +23,6 @@
                     </div>
                 </div>
             </div>
-        </div>
     </div>
 </div>
 
