--- a/templates/trips.html
+++ b/templates/trips.html
@@ -14,8 +14,8 @@
                         <div class="avatar-image"><img src="/static/img/avatar/goggles.png" width="25" height="25"/></div>
                     </td>
                     <td>
-                        <a href="{{ url_for('get_locations')}}"><strong>{{trip.location_name}}</strong></a>
-                        <div class="avatar-image"><img src="/static/img/avatar/goggles.png" width="25" height="25"/></div>
+                        <a href="{{ url_for('ski_resorts')}}"><strong>{{trip.location_name}}</strong></a>
+                        <div class="avatar-image"><img src="/static/img/resorts_thumbs/mountain05.png" width="25" height="25"/></div>
                     </td>
                     <td>
                         <strong>From:  {{trip.from}}  </strong> 
