Split navbar view into loggedIn and out

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -57,6 +57,12 @@ body{
     float: left;
 }
 
+.message-board{
+    justify-content: center;
+    background-color: white;
+    width: 200px;
+    
+}
 
 .card-title h5{
     color: #0056B2;
