--- a/templates/sign_in.html
+++ b/templates/sign_in.html
@@ -11,11 +11,11 @@
                             <div class="row">
                                 <div class="input-field col s12 m12 l6">
                                     <i class="material-icons prefix">account_circle</i>
-                                    <input placeholder="your name" id="name" name="name" type="text" class="validate">
+                                    <input placeholder="your name" id="name" name="name" type="text" class="validate" required>
                                 </div>
                                 <div class="input-field col s12 m12 l6">
                                     <i class="material-icons prefix">lock</i>
-                                    <input placeholder="your password" id="password" name="password" type="password">
+                                    <input placeholder="your password" id="password" name="password" type="password" required>
                                 </div>
                             </div>
                             <button class="btn waves-effect waves-light right" type="submit">Sign In</button>
