--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -8,29 +8,23 @@
                 <div id="signup-form" class="card-panel grey lighten-5">
                     <span class="card-title">SIGN UP</span>
                     <div class="row">
-                        <form action="{{ url_for('sign_up') }}" method="POST" class="col s12">
+                        <form action="{{ url_for('add_user') }}" method="POST" class="col s12">
                             <div class="row">
                                 <div class="input-field col s12 m12 l6">
                                     <i class="small material-icons prefix">account_circle</i>
-                                    <input placeholder="your name" id="name" name="name" type="text" class="validate">
-                                </div>
-                                <div class="input-field col s12 m12 l6">
+                                    <input placeholder="your name" id="name" name="name" type="text" class="validate" required>
+                                    </div>
+                                    <div class="input-field col s12 m12 l6">
                                     <i class="material-icons prefix">lock</i>
-                                    <input placeholder="your password" id="password" name="password" type="password">
+                                    <input placeholder="your password" id="password" name="password" type="password" required>
                                 </div>
-                                <!--
-                                <div class="input-field col s12">
-                                    <i class="material-icons prefix">lock</i>
-                                    <input placeholder="Re-enter your password" id="password_two" name="password_two" type="password">
-                                    <label for="password_two"><span class="red-text"><b></b></span></label>
-                                </div> -->
                                 <div class="input-field col s12 m12 l6">
                                     <i class="material-icons prefix">wc</i>
-                                    <input placeholder="male or female" id="gender" name="gender" type="text" class="validate">
+                                    <input placeholder="male or female" id="gender" name="gender" type="text" class="validate" required>
                                 </div>
                                 <div class="input-field col s12 m12 l6">
                                     <i class="material-icons prefix">date_range</i>
-                                    <select class="icons dropdown-content" id="ageRange" name="ageRange" required="" aria-required="true">
+                                    <select class="icons dropdown-content" id="ageRange" name="ageRange" required aria-required="true">
                                         <option value="1" selected>Your age</option>
                                         <option value="18-25">18 to 25</option>
                                         <option value="26-32">26 to 32</option>
@@ -41,20 +35,20 @@
                                 </div>
                                 <div class="input-field col s12 m12 l6">
                                     <i class="material-icons prefix">location_city</i>
-                                    <input placeholder="you are from:" id="from" name="from" type="text" class="validate">
+                                    <input placeholder="you are from:" id="from" name="from" type="text" class="validate" required>
                                 </div>
                                 <div class="input-field col s12 m12 l6">
                                     <i class="material-icons prefix">face</i>
-                                    <select class="icons dropdown-content" id="avatar" name="avatar" required="" aria-required="true">
+                                    <select class="icons dropdown-content" id="avatar" name="avatar" aria-required="true" required>
                                         <option value="1" selected>Choose your Avatar</option>
-                                        <option value="skiboot" data-icon="/static/img/avatar/boot.png">SkiBoot</option>
-                                        <option value="cabin" data-icon="/static/img/avatar/cabin.png">Cabin</option>
-                                        <option value="coffee" data-icon="/static/img/avatar/coffee.png">Coffee</option>
-                                        <option value="goggles" data-icon="/static/img/avatar/goggles.png">Goggles</option>
-                                        <option value="peak" data-icon="/static/img/avatar/peak.png">Peak</option>
-                                        <option value="skis" data-icon="/static/img/avatar/skier.png">Skis</option>
-                                        <option value="skipass" data-icon="/static/img/avatar/skipass.png">SkiPass</option>
-                                        <option value="snowboard" data-icon="/static/img/avatar/snowboarder.png">Snowboard</option>
+                                        <option value="/static/img/avatar/boot.png" data-icon="/static/img/avatar/boot.png">SkiBoot</option>
+                                        <option value="/static/img/avatar/cabin.png" data-icon="/static/img/avatar/cabin.png">Cabin</option>
+                                        <option value="/static/img/avatar/coffee.png" data-icon="/static/img/avatar/coffee.png">Coffee</option>
+                                        <option value="/static/img/avatar/goggles.png" data-icon="/static/img/avatar/goggles.png">Goggles</option>
+                                        <option value="/static/img/avatar/peak.png" data-icon="/static/img/avatar/peak.png">Peak</option>
+                                        <option value="/static/img/avatar/skier.png" data-icon="/static/img/avatar/skier.png">Skis</option>
+                                        <option value="/static/img/avatar/skipass.png" data-icon="/static/img/avatar/skipass.png">SkiPass</option>
+                                        <option value="/static/img/avatar/snowboarder.png" data-icon="/static/img/avatar/snowboarder.png">Snowboard</option>
                                     </select>
                                 </div>
                             </div>
