--- a/templates/nav.html
+++ b/templates/nav.html
@@ -13,7 +13,7 @@
                         <li><a href="#">New Trip</a></li>
                         <li><a  id="ski-resorts-link" href="{{url_for('ski_resorts')}}">Ski Resorts</a></li>
                         <li><a href="#">New Ski Resort</a></li>
-                        <li><a href="#"><i class="fas fa-sign-out-alt"></i></a></li>
+                        <li><a href="#">Sign Out</a></li>
                     </ul>
                 </div>
             </nav>
