Added Sign Out to the menu

--- a/templates/nav.html
+++ b/templates/nav.html
@@ -13,7 +13,7 @@
                         <li><a href="#">New Trip</a></li>
                         <li><a  id="ski-resorts-link" href="{{url_for('ski_resorts')}}">Ski Resorts</a></li>
                         <li><a href="#">New Ski Resort</a></li>
-                        <li><a href="#">Sign Out</a></li>
+                        <li><a href="{{url_for('sign_out')}}">Sign Out</a></li>  
                     </ul>
                 </div>
             </nav>
