--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
 
 <body>
     <!-- Navbar -->
-    {% if active == 'signed' %} 
+    {% if active == 'signedIn' %} 
     {% include 'nav.html' %}
     {% else %}
     {% include 'index_nav.html' %}
