--- a/templates/nav.html
+++ b/templates/nav.html
@@ -11,8 +11,8 @@
                     <ul id="nav-mobile" class="right hide-on-med-and-down">
                         <li><a href="{{url_for('trips')}}">Trips</a></li>
                         <li><a href="#">New Trip</a></li>
-                        <li><a  id="ski-resorts-link" href="{{url_for('ski_resorts')}}">Ski Resorts</a></li>
-                        <li><a href="#">New Ski Resort</a></li>
+                        <li><a href="{{url_for('ski_resorts')}}">Ski Resorts</a></li>
+                        <li><a href="{{ url_for('add_skiresort') }}">New Ski Resort</a></li>
                         <li><a href="{{url_for('sign_out')}}">Sign Out</a></li>  
                     </ul>
                 </div>
