--- a/templates/add_skiresort.html
+++ b/templates/add_skiresort.html
@@ -8,14 +8,14 @@
                     <span class="card-title">NEW SKI RESORT</span>
                     <div class="row">
                         <form action="{{ url_for('insert_skiresort') }}" method="POST" class="col s12">
-                            <div class="row">
+                            
                                 <div class="input-field col s12 m12 l6">
                                     <i class="small material-icons prefix">account_circle</i>
-                                    <input placeholder="Ski resort name" id="location_name" name="location_name" type="text" class="validate" required>
+                                    <input placeholder="ski resort name" id="location_name" name="location_name" type="text" class="validate" required>
                                 </div>
                                 <div class="input-field col s12 m12 l6">
                                     <i class="small material-icons prefix">description</i>
-                                    <input placeholder="Short description" id="description" name="description" type="text" class="validate" required>
+                                    <input placeholder="short description" id="description" name="description" type="text" class="validate" required>
                                 </div>
                                 <div class="input-field col s12 m12 l6">
                                     <i class="material-icons prefix">web</i>
@@ -25,48 +25,18 @@
                                     <i class="material-icons prefix">map</i>
                                     <input placeholder="map link" id="map" name="map" type="url" class="validate" required>
                                 </div>
-                                <div class="input-field col s12 m12 l12">
-                                    <div class="row">
-                                        <div class="input-field col s6 m6 l6">
-                                            
-                                                <label for="spring"><span>Spring</span>
-                                                    <input type="checkbox" id="spring" name="spring" />
-                                                </label>
-                                            
-                                        </div>    
-                                        <div class="input-field col s6 m6 l6">
-                                            
-                                                <label for="autumn"><span>Autumn</span>
-                                                    <input type="radio" id="autumn" name="autumn" />
-                                                </label>
-                                            
-                                        </div>    
-                                    </div>
-                                    <div class="row">
-                                        <div class="input-field col s6 m6 l6">
-                                            <p>
-                                                <label for="night"><span>Night</span>
-                                                    <input type="checkbox" id="night" name="night"/>
-                                                </label>
-                                            </p>
-                                        </div> 
-                                        <div class="input-field col s6 m6 l6">
-                                            <p>
-                                                <label for="glacier"><span>Glacier</span>
-                                                    <input type="checkbox" id="glacier" name="glacier"/>
-                                                </label>
-                                            </p>
-                                        </div> 
-                                    </div>
+                                <div class="input-field col s12 m12 l6">
+                                    <i class="material-icons prefix">terrain</i>
+                                    <input placeholder="glacier-yes/no?" id="glacier" name="glacier" type="text" class="validate" required>
                                 </div>
                                 <div class="input-field col s12 m12 l6">
-                                    <i class="small material-icons prefix">comment</i>
-                                    <input placeholder="additional info" id="other_info" name="other_info" type="text" class="validate" required>
+                                    <i class="material-icons prefix">brightness_3</i>
+                                    <input placeholder="night skiing-yes-no?" id="night" name="night" type="text" class="validate" required>
                                 </div>
-                                <label class="checkbox-inline">
+                                
                                 <div class="input-field col s12 m12 l6">
                                     <i class="material-icons prefix">face</i>
-                                    <select class="icons dropdown-content" id="avatar" name="avatar" required="" aria-required="true">
+                                    <select class="icons dropdown-content" id="thumbnail" name="thumbnail" required="" aria-required="true">
                                         <option value="1" selected>Choose a Thumbnail</option>
                                         <option value="/static/img/resorts_thumbs/mountain01.png" data-icon="/static/img/resorts_thumbs/mountain01.png"></option>
                                         <option value="/static/img/resorts_thumbs/mountain02.png" data-icon="/static/img/resorts_thumbs/mountain02.png"></option>
@@ -80,7 +50,11 @@
                                         <option value="/static/img/resorts_thumbs/mountain10.png" data-icon="/static/img/resorts_thumbs/mountain10.png"></option>
                                     </select>
                                 </div>
-                            </div>
+                                <div class="input-field col s12 m12 l6">
+                                    <i class="small material-icons prefix">comment</i>
+                                    <input placeholder="additional info" id="other_info" name="other_info" type="text" class="validate" required>
+                                </div>
+                            
                             <button class="btn waves-effect waves-red right" type="submit">Add Ski Resort</button>
                         </form>
                     </div>
